# azk

./: Cargo.toml  README.md
.github/workflows/: benches.yml  unit_tests.yml
crates/kzg/: Cargo.toml
crates/kzg/benches/: bench_ark.rs
crates/kzg/src/: errs.rs  lib.rs
crates/kzg/src/backend/: arkworks_bn254.rs  mod.rs
crates/kzg/src/primitives/: mod.rs  poly.rs  serde.rs
crates/primitives/: Cargo.toml
