[package]
name = "kzg"
edition.workspace = true

[dependencies]
serde.workspace = true
rayon.workspace = true
thiserror.workspace = true
ark-bn254.workspace = true
ark-std.workspace = true
ark-ec.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true

[dev-dependencies]
criterion.workspace = true
ark-poly.workspace = true
ark-bls12-381.workspace = true
ark-bls12-377.workspace = true
ark-poly-commit.workspace = true
ark-crypto-primitives.workspace = true

[[bench]]
name = "bench_ark"
harness = false

[features]
parallel = []
